# simon

./: README.md  com.example.MyTauriApp.yaml  package-lock.json  package.json
.flatpak-builder/cache/refs/heads/x86_64-com.example.MyTauriApp.yaml/: init
.flatpak-builder/checksums/: x86_64-com.example.MyTauriApp.yaml
.flatpak-builder/git/https_github.com_omarghandour_simon.git/: FETCH_HEAD  config
.flatpak-builder/git/https_github.com_omarghandour_simon.git/objects/pack/: pack-4a02a27ebef687d57d592398e7beaec6be1029d1.idx  pack-4a02a27ebef687d57d592398e7beaec6be1029d1.pack  pack-4a02a27ebef687d57d592398e7beaec6be1029d1.rev  pack-60a0288a97db0f98b0e7eb46e6ac9251ddeb369b.idx  pack-60a0288a97db0f98b0e7eb46e6ac9251ddeb369b.pack  pack-60a0288a97db0f98b0e7eb46e6ac9251ddeb369b.rev  pack-815b7a370a38090ab31c50ed69c9b9efa423f6ef.idx  pack-815b7a370a38090ab31c50ed69c9b9efa423f6ef.pack  pack-815b7a370a38090ab31c50ed69c9b9efa423f6ef.rev  pack-f7920a7f8ddbd367c852b89be01a3a13128c3040.idx  pack-f7920a7f8ddbd367c852b89be01a3a13128c3040.pack  pack-f7920a7f8ddbd367c852b89be01a3a13128c3040.rev
.flatpak-builder/git/https_github.com_omarghandour_simon.git/refs/heads/: master
src/: game.js  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
